--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -9,3 +9,5 @@ circuit = { path = "../circuit", features = ["default_conductors"] }
 egui_extras = { version = "*", features = ["default", "all_loaders"] }
 eframe = "0.28.1"
 egui = "0.28.1"
+smallvec = "1.13.2"
+parse_int = "0.6.0"
